--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,6 @@
-RewriteEngine On
-#RewriteRule ^([a-zA-Z0-9]+)$ index.php?t=$1 [L]
-RewriteRule ^(\w+)$ index.php?t=$1 [L]
+# just note here. Configured in vhost.conf
+#RewriteEngine On
+#RewriteRule ^(\w+)$ index.php?t=$1 [L]
 
-#RewriteCond %{HTTPS} off
-#RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-RewriteRule ^ http%{ENV:protossl}://%1%{REQUEST_URI} [L,R=301]
+#RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+#RewriteRule ^ http%{ENV:protossl}://%1%{REQUEST_URI} [L,R=301]
