--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,10 @@
 # just note here. Configured in vhost.conf
 #RewriteEngine On
-#RewriteRule ^(\w+)$ index.php?t=$1 [L]
 
+#RewriteCond %{HTTPS} off [OR]
+#RewriteCond %{HTTP_HOST} ^www\.itove\.com*
+#RewriteRule ^(.*)$ https://itove.com/$1 [L,R=301]
+
+#RewriteRule ^(\w+)$ index.php?t=$1 [L]
 #RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
 #RewriteRule ^ http%{ENV:protossl}://%1%{REQUEST_URI} [L,R=301]
