--- a/fgw/composer.json
+++ b/fgw/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "phpoffice/phpspreadsheet": "^1.0"
+        "phpoffice/phpspreadsheet": "^1.0",
+        "twbs/bootstrap": "^3.3",
+        "fortawesome/font-awesome": "^4.7"
     }
 }
