--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,14 @@
 # just note here. Configured in vhost.conf
-#RewriteEngine On
+RewriteEngine On
 
-#RewriteCond %{HTTPS} off [OR]
-#RewriteCond %{HTTP_HOST} ^www\.itove\.com*
-#RewriteRule ^(.*)$ https://itove.com/$1 [L,R=301]
+RewriteRule ^ - [E=protossl]
+RewriteCond %{HTTPS} on
+RewriteRule ^ - [E=protossl:s]
 
-#RewriteRule ^(\w+)$ index.php?t=$1 [L]
-#RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-#RewriteRule ^ http%{ENV:protossl}://%1%{REQUEST_URI} [L,R=301]
+#RewriteCond %{REQUEST_FILENAME} !-d
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
+
+RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+RewriteRule ^ http%{ENV:protossl}://%1%{REQUEST_URI} [L,R=301]
+
