--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,11 @@
 # just note here. Configured in vhost.conf
-RewriteEngine On
-
-RewriteRule ^ - [E=protossl]
-RewriteCond %{HTTPS} on
-RewriteRule ^ - [E=protossl:s]
-
+#
+#RewriteEngine On
+#
 #RewriteCond %{REQUEST_FILENAME} !-d
 #RewriteCond %{REQUEST_FILENAME} !-f
 #RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
-
-RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-RewriteRule ^ http%{ENV:protossl}://%1%{REQUEST_URI} [L,R=301]
+#
+#RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+#RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
 
