--- a/fgw/composer.json
+++ b/fgw/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "phpoffice/phpspreadsheet": "^1.0",
         "twbs/bootstrap": "^3.3",
-        "fortawesome/font-awesome": "^4.7"
+        "fortawesome/font-awesome": "^4.7",
+        "symfony/validator": "^4.0"
     }
 }
